proj1/tests/correct/correct_break_nesting.py
def f(n):
	while 1:
		if 2:
			break
	return n + 2;

print f(2)
