proj1/tests/error/nested_function.py
def f(n):
	for f in [1]:
		break
	while 1:
		if 2:
			def g(d):
				x = 1
				return 2
